--- a/bestSellers/index.html
+++ b/bestSellers/index.html
@@ -5,69 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3 livros de horror</title>
   </head>
-  <!--Essa página foi criada utilizando como base o conteúdo do artigo do site: https://rollingstone.com.br/vitrine/voce-sabe-quais-sao-os-10-livros-de-horror-com-as-melhores-avaliacoes/ 
-Autor: Redação Publicado em 04/07/2024, às 11h00 -->
+  <!--Essa página foi criada utilizando como base o conteúdo do artigo do site: https://www.cnnbrasil.com.br/entretenimento/veja-quais-foram-os-livros-de-ficcao-mais-vendidos-no-brasil-em-2024/
+Autor: Fernanda Pinottida CNN
+02/01/2025 às 18:37 | Atualizado 02/01/2025 às 18:44 -->
   <body>
     <div class="conteudo-principal">
       <h1>
-        Você sabe quais são os 10 livros de horror com as melhores avaliações?
+        Você sabe quais são os livros de ficção mais vendidos no Brasil em 2024?
       </h1>
-      <h3>Conheça os títulos de horror mais bem avaliados no site da Amazon</h3>
+      <h3>Obras da escritora Colleen Hoover, que ganhou uma adaptação para os cinemas neste ano, lideram a lista</h3>
 
       <p>
-        A sua hora da leitura vai ficar mais divertida! A Rolling Stone elencou
-        os 10 títulos com as melhores avaliações na Amazon. Encontre obras de
-        autores renomados como Edgar Allan Poe, Stephen King. Abaixo são
-        mostrados três dos dez títulos selecionados!
+        Duas obras da autora norte-americana Colleen Hoover lideram a lista de livros de ficção mais vendidos no Brasil durante 2024. A informação é de um levantamento feito pela Publishnews, elaborado a partir de consultas feitas com mais de 30 redes de livrarias do país.
+
+        Em primeiro lugar, está “É assim que acaba”, obra que ganhou uma adaptação para os cinemas em junho deste ano, estrelada por Blake Lively e Justin Baldoni. Em segundo lugar, está a sequência da história, “É assim que começa”.
       </p>
 
       <nav>
         <ul>
-          <a href="#it"><li>It: A Coisa</li></a>
-          <a href="#rei"><li>O Rei da Terra do Nunca</li></a>
-          <a href="#corvo"><li>O Corvo e Outras Histórias</li></a>
+          <a href="#acaba"><li>É assim que acaba”, de Colleen Hoover – 69.836 cópias</li></a>
+          <a href="#comeca"><li>É assim que começa”, de Colleen Hoover – 51.911 cópias</li></a>
+          <a href="#bbt"><li>A biblioteca da meia-noite”, de Matt Haig – 51.772 cópias</li></a>
+          <a href="#"><li>“A filha dos rios”, de Ilko Minev – 51.680 cópias</li></a>
+          <a href="#"><li>“Tudo é rio”, de Carla Madeira – 44.795 cópias</li></a>
+
         </ul>
       </nav>
 
-      <div class="conteudo-livro" id="it">
-        <h2>It: A Coisa, de Stephen King (2014)</h2>
+      <div class="conteudo-livro" id="acaba">
+        <h2>É assim que acaba”, de Colleen Hoover – 69.836 cópias</h2>
         <p>
-          <span>Sinopse:</span> Durante as férias de 1958, em uma pacata
-          cidadezinha chamada Derry, um grupo de sete amigos começa a ver coisas
-          estranhas. Um conta que viu um palhaço, outro que viu uma múmia.
-          Finalmente, acabam descobrindo que estavam todos vendo a mesma coisa:
-          um ser sobrenatural e maligno que pode assumir várias formas. É assim
-          que Bill, Beverly, Eddie, Ben, Richie, Mike e Stan enfrentam a Coisa
-          pela primeira vez.
+          <span>Sinopse:</span> Lily Bloom acredita ter encontrado o amor da sua vida, no entanto, após uma atitude abusiva de Kyle, ela se lembra de seu passado sombrio e deve decidir se o amor por si só pode levar o casamento adiante. Para complicar ainda mais as coisas, um amor antigo reaparece em sua vida. 
         </p>
 
-        <img src="it-livro.jpg" alt="capa do livro IT -  a coisa" />
+        <img src="acaba.jpg" alt="capa do livro IT -  a coisa" />
       </div>
 
-      <div class="conteudo-livro" id="rei">
-        <h2>O Rei da Terra do Nunca, de Nikki St. Crowe (2023)</h2>
+      <div class="conteudo-livro" id="comeca">
+        <h2>É assim que começa”, de Colleen Hoover – 51.911 cópias</h2>
         <p>
-          <span>Sinopse:</span> Por dois séculos, todas as mulheres da família
-          Darling desapareciam quando completavam dezoito anos. Às vezes,
-          ficavam longe por um dia, uma semana ou até um mês. Mas sempre
-          retornavam destruídas. Agora, na tarde do aniversário de dezoito anos
-          de Winnie Darling, sua mãe está trancando todas as janelas e portas.
+          <span>Sinopse:</span> Lily Bloom continua administrando uma floricultura. Seu ex-marido abusivo, Ryle, ainda é um cirurgião, mas agora os dois estão oficialmente divorciados e dividem a guarda da filha, Emerson. Culpando Atlas pelo fim de seu casamento, Ryle não está nada disposto a aceitar o novo relacionamento de Lily. Alternando entre os pontos de vista de Atlas e Lily, o livro revela o mais sobre o passado de Atlas e acompanhando a jornada de Lily para abraçar a sua segunda chance, no amor enquanto lida com um ex-marido ciumento.
         </p>
         <img
-          src="oreidaterradonunca.jpg"
+          src="comeca.jpg"
           alt="capa do livro o rei da terra do nunca"
         />
       </div>
 
-      <div class="conteudo-livro" id="corvo">
-        <h2>O Corvo e Outras Histórias, de Edgar Allan Poe (2021)</h2>
+      <div class="conteudo-livro" id="bbt">
+        <h2>A biblioteca da meia-noite”, de Matt Haig – 51.772 cópias</h2>
         <p>
-          <span>Sinopse:</span> Leia contos de Edgar Allan Poe, que debate temas
-          tenebrosos como ira, tortura, vingança, engano e ganância. Toda essa
-          aura sepulcral perpassa as obras selecionadas para esta edição em cada
-          dura, com fitilho e ilustrações originais de Gustave Doré.
+          <span>Sinopse:</span> Aos 35 anos, Nora Seed é uma mulher cheia de talentos e poucas conquistas. Arrependida das escolhas que fez no passado, ela vive se perguntando o que poderia ter acontecido caso tivesse vivido de maneira diferente. Após ser demitida e seu gato ser atropelado, Nora vê pouco sentido em sua existência e decide colocar um ponto final em tudo. Porém, quando se vê na Biblioteca da Meia-Noite, Nora ganha uma oportunidade única de viver todas as vidas que poderia ter vivido.
         </p>
-        <img src="ocorvo.jpg" alt="capa do livro o corvo e outas histórias" />
+        <img src="bbt.jpg" alt="capa do livro o corvo e outas histórias" />
       </div>
     </div>
     <footer>Aula para formatação de CSS. Nome do aluno.</footer>
