--- a/bestSellers/index.html
+++ b/bestSellers/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3 livros de horror</title>
+    <title>Best Sellers 2024</title>
   </head>
   <!--Essa página foi criada utilizando como base o conteúdo do artigo do site: https://www.cnnbrasil.com.br/entretenimento/veja-quais-foram-os-livros-de-ficcao-mais-vendidos-no-brasil-em-2024/
 Autor: Fernanda Pinottida CNN
